Signed-off-by: zhangbo8264 <zhangbo8264@163.com>

--- a/public/css/icon/demo.html
+++ b/public/css/icon/demo.html
@@ -48,6 +48,13 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe60e;</i>
+                    <div class="name">文件</div>
+                    <div class="code">&amp;#xe60e;</div>
+                    <div class="fontclass">.libreoffice</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe607;</i>
                     <div class="name">用户好友</div>
                     <div class="code">&amp;#xe607;</div>
